--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -4,16 +4,9 @@
 
 == Introduction
 
-ifeval::[{uyuni-content} == true]
-Only {opensuse} Leap 15.3 and newer are supported to be used as container host for {productname} Proxy containers.
-endif::[]
-
-ifeval::[{suma-content} == true]
-
 {productname} Proxy containers are supported only on {sles} 15 SP3 and newer versions.
-endif::[]
 
-To be used as a base for {productname} Proxy, container first needs to be registered as a {salt} client to the {productname} Server.
+To be used as a base for {productname} Proxy, the container first needs to be registered as a {salt} client to the {productname} Server.
 [literal]``Containers Module`` is also required to be available for the container host.
 
 Connecting the container host as a traditional client will not work because required packages are not available.
