Apply suggestions from code review
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/specialized-guides/pages/salt/salt-connectivity.adoc
+++ b/modules/specialized-guides/pages/salt/salt-connectivity.adoc
@@ -1,5 +1,5 @@
 [[salt-connectivity]]
-= {Salt} Connectivity
+= {salt} Connectivity
 
 Depending on the size and spreadness of the environment where {productname} is used some connectivity issues are possible.
 There are no common recommendations for all the possible use cases as the environments could be very different expecially if public clouds instances are involved.
@@ -16,7 +16,7 @@ If this is the case, it is recommended to set [literal]``tcp_keepalive`` paramet
 The parameters with the values from the example below can be used as a starting point to look for settings, which could prevent cases of connection loss without restoring for some environments.
 It is recommended to put the parameters in the separate drop-in configuration file like [path]``/etc/venv-salt-minion/minion.d/tuning-keepalives.conf`` or [path]``/etc/salt/minion.d/tuning-keepalives.conf``, depending on the minion type used on the client side.
 
-.Example: Keepalive parameters example values
+.Example: Keepalive Parameters Example Values
 
 ----
 ######      Keepalive settings        ######
