--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -76,7 +76,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 
 
-[[minimal.susemgr.prep]]
+[[minimal.susemgrproxy.prep]]
 == Register {sle-micro} and {productname} {productnumber} Proxy
 
 // Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
@@ -100,7 +100,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 transactional-update register -p SUSE-Manager-Proxy/5.0/x86_64 -r <REGCODE>
 ----
 
-. Reboot
+. Reboot.
 
 . Update the system:
 +
@@ -114,7 +114,7 @@ transactional-update
 . This step is optional.
   However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
 ** For more information, see [command]``mgr-storage-proxy --help``.
-This tool simplifies creating the container storage and database volumes.
+This tool simplifies creating the container volumes.
 
 ** Use the command in the following manner:
 +
@@ -141,8 +141,6 @@ For more information, see
 
 
 
-// FIXME: make this section a snippet or move it to a general intro for both,
-//        KVM and VMware
 == Create an Activation Key for the Proxy
 
 On the {productname} server, create an activation key for the Proxy.
@@ -176,68 +174,11 @@ On the {productname} server, create an activation key for the Proxy.
 include::../generate_proxy_config.adoc[]
 
 
-
-[[proxy-vm-setup-containers-transfer-config]]
-== Transfer the Proxy Configuration
-
-The {webui} generates a configuration archive.
-This archive needs to be made available on the proxy container host.
+include::../transfer_proxy_config.adoc[]
 
 
-.Procedure: Copying the Proxy Configuration
-. Copy the files from the Server container to the Server host OS:
-+
-----
-mgrctl cp server:/root/config.tar.gz .
-----
+include::../start_proxy.adoc[]
 
-. Next copy the files from the Server host OS to the Proxy host:
-+
-----
-scp config.tar.gz <proxy-FQDN>:/root
-----
-
-. Install the Proxy with:
-+
-
-----
-mgrpxy install podman config.tar.gz
-----
-
-
-
-[[proxy-vm-setup-containers-transfer-start]]
-== Start the {productname} {productnumber} Proxy
-
-Container can now be started with the [literal]`mgrpxy` command:
-
-[[proc-proxy-vm-setup-containers-setup-start]]
-.Procedure: Start and Check Proxy Status
-
-. Start the Proxy by calling:
-+
-
-----
-mgrpxy start
-----
-
-. Check container status by calling:
-+
-
-----
-mgrpxy status
-----
-+
-
-Five {productname} Proxy containers should be present:
-
-- proxy-salt-broker
-- proxy-httpd
-- proxy-tftpd
-- proxy-squid
-- proxy-ssh
-
-And should be part of the [literal]``proxy-pod`` container pod.
 
 
 === Using a Custom Container Image for a Service
