--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -1,25 +1,26 @@
 [[installation-proxy-containers]]
 = Install Containerized {productname} Proxy
 
-[NOTE]
-====
 
-ifeval::[{uyuni-content} == true]
-Only {opensuse} Leap 15.3 and newer are supported to be used as container host for {productname} Proxy containers.
-endif::[]
+== Introduction
 
-ifeval::[{suma-content} == true]
-Only {sles} 15 SP3 and newer are supported to be used as container host for {productname} Proxy containers.
-endif::[]
-====
+{productname} Proxy containers are supported only on {sles} 15 SP3 and newer versions.
 
-The container host must be connected to {productname} as a {salt} client.
-Connecting the container host as a traditional client will not work because required packages will not be available.
+To be used as a base for {productname} Proxy, the container first needs to be registered as a {salt} client to the {productname} Server.
+[literal]``Containers Module`` is also required to be available for the container host.
 
+Connecting the container host as a traditional client will not work because required packages are not available.
+
+For more information about registering {salt} client to the {productname} Server, see xref:client-configuration:registration-overview.adoc[].
 
 
 [[installation-proxy-containers-requirements]]
 == Container Host Requirements
+
+To ensure that the domain name of the {productname} Server can be resolved by the clients:
+
+* Both container proxy and client machines must be connected to a DNS server
+* Reverse lookup must work
 
 
 [cols="1,1,1", options="header"]
@@ -58,39 +59,19 @@ Connecting the container host as a traditional client will not work because requ
 | Remark
 
 | Connection Method
-| Salt
-| Host must be configured as a Salt client
+| {salt}
+| Host must be configured as a {salt} client
 
 |===
-
-[IMPORTANT]
-====
-To ensure that the domain name of the {productname} Server can be resolved by the clients:
-
-* Both container proxy and client machines must be connected to a DNS server
-* Reverse lookup must work
-====
 
 
 
 [[installation-proxy-containers-services]]
-== Install Container Services on the host system
-
-[NOTE]
-====
-Container host to be used as a base for {productname} Proxy containers needs to be first registered as a Salt client to the {productname} Server.
-
-For more information about registering Salt client to the {productname} Server, see xref:client-configuration:registration-overview.adoc[].
-====
-
-[NOTE]
-====
-[literal]``Containers Module`` is required to be available for container host.
-====
+== Install Container Services on the Host System
 
 {productname} Proxy containers are using [literal]``podman`` and [literal]``systemd`` to run and manage all proxy containers.
 
-First step is to install container control files provided by package [literal]``uyuni-proxy-systemd-services``.
+The first step is to install container control files provided by package [literal]``uyuni-proxy-systemd-services``.
 
 
 [[proc-installation-proxy-containers-services]]
@@ -103,15 +84,22 @@ For more information about assigning software channels to the system, see xref:a
 
 . Manually install {productname} Proxy service package:
 +
-
 ----
 zypper install uyuni-proxy-systemd-services
 ----
++
+[IMPORTANT]
+====
+Package [literal]``uyuni-proxy-systemd-service`` comes from the following channels:
+
+* SLE-Manager-Tools_15
+* SLE-Manager-Tools-For-Micro_5 in the case of {sle-micro}
+====
 
 
 
 [[installation-proxy-containers-customize-config]]
-== Customize {productname} Proxy configuration
+== Customize {productname} Proxy Configuration
 
 {productname} Proxy containers require some volumes to be mounted for long term storage.
 Those volumes are automatically created by [literal]``podman`` and can be listed using the [command]``podman volume ls`` command.
@@ -143,7 +131,7 @@ Changing the [path]``uyuni-proxy-systemd-services.config`` file and especially t
 
 
 
-=== Using a custom container image for a service
+=== Using a Custom Container Image for a Service
 
 By default, the {productname} Proxy suite is set to use the same image version and registry path for each of its services.
 However, it is possible to override the default values for a specific service.
@@ -174,7 +162,7 @@ For more information, see [command]``uyuni-proxy --help``.
 
 
 [[installation-proxy-containers-firewall-rules]]
-== Allow network access for provided services on container host firewall
+== Allow Network Access for Provided Services on Container Host Firewall
 
 {productname} Proxy containers work as so called node-port service.
 This means proxy container pod shares container host network TCP and UDP port space.
