--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -3,6 +3,13 @@
 
 ifeval::[{suma-content} == true]
 This table outlines hardware and software requirements for the {productname} Server and Proxy, on {x86_64}, {arm}, {ppc64le} and {s390x} architecture.
+
+
+[WARNING]
+====
+{productname} installations based on {ppc64le} or {s390x} architecture cannot use secure boot for network booting clients.
+This limitation exists because the shim bootloader is not available for both these architectures.
+====
 endif::[]
 
 ifeval::[{uyuni-content} == true]
