Replaced additional SCC parameters.

--- a/modules/specialized-guides/pages/qs-sap/prepare-clients.adoc
+++ b/modules/specialized-guides/pages/qs-sap/prepare-clients.adoc
@@ -14,7 +14,7 @@ For more information about the clients you need to set up for an SAP cluster, se
 
 
 
-== Register Clients to the {SCC}
+== Register Clients to the {scclongform}
 
 Each client within your SAP cluster must be registered with the {scclongform}.
 To obtain your registration code, navigate to https://scc.suse.com/login in your web browser.
