--- a/modules/specialized-guides/pages/qs-sap/prepare-server.adoc
+++ b/modules/specialized-guides/pages/qs-sap/prepare-server.adoc
@@ -18,7 +18,7 @@ Now you can use the {webui} to prepare software channels and activation keys for
 On the {productname} Server, add the appropriate SAP channels:
 From the {webui}, add [systemitem]``SUSE Linux Enterprise Server 15 for SAP``.
 
-Synchronize the {productname} Server with the {SCC}.
+Synchronize the {productname} Server with the {scclongform}.
 You can do this using the {webui}.
 Add the new channel to your activation key.
 
