Upgrading and extending SCC parameters.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -296,7 +296,7 @@ endif::[]
 | Supported?
 
 | ``spacewalk-common-channels``
-| Add channels not provided by {scc}
+| Add channels not provided by {scclongform}
 | {check}
 
 | ``spacewalk-hostname-rename``
