--- a/modules/specialized-guides/pages/qs-sap/prepare-clients.adoc
+++ b/modules/specialized-guides/pages/qs-sap/prepare-clients.adoc
@@ -14,15 +14,15 @@ For more information about the clients you need to set up for an SAP cluster, se
 
 
 
-== Register Clients to the {SCC}
+== Register Clients to the {scclongform}
 
-Each client within your SAP cluster must be registered with the {scc}.
+Each client within your SAP cluster must be registered with the {scclongform}.
 To obtain your registration code, navigate to https://scc.suse.com/login in your web browser.
 Log in to your SCC account, or follow the prompts to create a new account.
 Click the btn:[Subscriptions] tab to see the registration code.
 When you install {sles}{nbsp}15 for SAP the {unifiedinstaller} prompts you for the code.
 
-For more information about registering {productname} with {scc}, see xref:installation-and-upgrade:general-requirements.adoc[].
+For more information about registering {productname} with {scclongform}, see xref:installation-and-upgrade:general-requirements.adoc[].
 
 
 
