Replacing SCC with an actual parameter.

--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -23,7 +23,7 @@ For more information on RMT, see {sles-base-os-documentation}/book-rmt.html.
 
 
 [[disconnected-setup-sync-scc]]
-== Synchronize Channels and Repositories from SCC
+== Synchronize Channels and Repositories from {scc}
 
 === Synchronize RMT
 
@@ -50,7 +50,7 @@ For more information on setting up RMT, see {sles-base-os-documentation}/book-rm
 
 
 
-.Procedure: Synchronizing RMT with SCC
+.Procedure: Synchronizing RMT with {scc}
 . On the RMT instance, list all available products and repositories for your organization:
 +
 ----
@@ -102,7 +102,7 @@ For more details on installing and configuring SMT, see https://documentation.su
 
 
 
-.Procedure: Synchronizing SMT with SCC
+.Procedure: Synchronizing SMT with {scc}
 . On the SMT instance, create a database replacement file:
 +
 ----
@@ -209,7 +209,7 @@ mgrctl exec -ti -- mgr-sync add channel channel-label
 [NOTE]
 ====
 Be aware that if [literal]``server.susemanager.fromdir`` is set, {productname} will not be able to check if {scclongform} credentials are valid or not.
-Instead, a warning sign will be displayed and no SCC online check will be performed.
+Instead, a warning sign will be displayed and no {scc} online check will be performed.
 ====
 
 An alternative to disconnected setup may be to copy content between servers using Inter-Server Synchronization (ISS).
