--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -32,7 +32,7 @@ Other versions or operating systems do not have this feature and the pages are n
 .Procedure: Enabling and synchronizing PTF repositories using the command line
 
 . On the console enter [command]``mgr-sync refresh``.
-. Enter [command]``mgr-sync list channel`` and look for channels starting with your SCC account name and `ptfs` in its name.
+. Enter [command]``mgr-sync list channel`` and look for channels starting with your {scc} account name and `ptfs` in its name.
   For example, `a123456-sles-15.3-ptfs-x86_64`.
 . Enable the PTF channel with [command]``mgr-sync add channel <label>``.
 
@@ -49,7 +49,7 @@ In {productname} {webui} every system with PTFs available for installation has a
 . In the {productname} {webui}, navigate to menu:Admin[Setup Wizard > Products] and look for the product you want to enable the PTF repository for.
 . Click btn:[Show product's channels] next to the products sync status.
 . You should see a popup listing mandatory and optional channels for the product.
-. In the optional channels list look for channels starting with your SCC account name and `ptfs` in its name.
+. In the optional channels list look for channels starting with your {scc} account name and `ptfs` in its name.
   For example `a123456-sles-15.3-ptfs-x86_64`.
 . Select the channel using the checkbox next to its name and click btn:[Confirm] to schedule the sync.
 
