--- a/modules/administration/pages/subscription-matching.adoc
+++ b/modules/administration/pages/subscription-matching.adoc
@@ -1,8 +1,8 @@
 [[subscription-matching]]
 = Subscription Matching
 
-Your {suse} products require subscriptions, which are managed by the {scclongform} (SCC).
-{productname} runs a nightly report checking the subscription status of all your registered clients against your SCC account.
+Your {suse} products require subscriptions, which are managed by the {scclongform} ({scc}).
+{productname} runs a nightly report checking the subscription status of all your registered clients against your {scc} account.
 The report gives you information about which clients consume which subscriptions, how many subscriptions you have remaining and available to use, and which clients do not have a current subscription.
 
 Navigate to menu:Audit[Subscription Matching] to see the report.
