--- a/modules/client-configuration/pages/client-upgrades.adoc
+++ b/modules/client-configuration/pages/client-upgrades.adoc
@@ -3,7 +3,7 @@
 
 Clients use the versioning system of their underlying operating system, and require regular upgrades.
 
-For SCC registered clients using {suse} operating systems, you can perform upgrades within the {productname} {webui}.
+For {scc} registered clients using {suse} operating systems, you can perform upgrades within the {productname} {webui}.
 For supported {sle}{nbsp}15 upgrade paths, see {sles-base-os-documentation}/cha-upgrade-paths.html
 
 To upgrade clients running SLE{nbsp}12 to SLE{nbsp}15, the upgrade is automated, but you need to do some preparation steps before you begin.
