--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -19,7 +19,7 @@ Before using the {payg} feature ensure:
 
 * A basic {scclongform} account is required. Enter your valid {scclongform} credentials in menu:Admin[Setup Wizard > Organization Credentials]. This account is required for accessing the {productname} client tools for boostrapping regardless of {payg} instances.
 
-* If you bootstrap the {payg} instance to SUSE Manager, SUSE Manager will disable its {payg} repositories then add repositories from where it mirrored the data from the RMT server. The final result will be {payg} instances acquiring the same repositories from the RMT servers but through the SUSE Manager server itself. Of course repositories can still be setup primarily from SCC.
+* If you bootstrap the {payg} instance to SUSE Manager, SUSE Manager will disable its {payg} repositories then add repositories from where it mirrored the data from the RMT server. The final result will be {payg} instances acquiring the same repositories from the RMT servers but through the SUSE Manager server itself. Of course repositories can still be setup primarily from {scc}.
 
 
 
@@ -93,7 +93,7 @@ To monitor the syncing progress of each channel, check the log files in the [pat
 ====
 If a product is provided by both the {payg} instance and one of the {scclongform} subscriptions, it will appear only once in the products list.
 
-When the channels belonging to that product are synced, the data might still come from the SCC subscription, and not from the Pay-As-You-Go instance.
+When the channels belonging to that product are synced, the data might still come from the {scc} subscription, and not from the Pay-As-You-Go instance.
 ====
 
 
