--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -296,7 +296,7 @@ Proceed to the next section to add your organization credentials for syncing wit
 
 == Connect {productname} {productnumber} to {scclongform}
 
-This section covers synchronizing with SCC from the {webui} and adding your first client channel.
+This section covers synchronizing with {scc} from the {webui} and adding your first client channel.
 
 [[proc-admin-organization-credentials]]
 .Procedure: Entering Organization Credentials
