--- a/modules/installation-and-upgrade/pages/install-proxy.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy.adoc
@@ -46,7 +46,7 @@ Before you begin, you will need to have created an account with {scclongform}, a
 
 . Click btn:[Local install media (ISO image or CDROM)].
 
-. In the [guimenu]``Create a new virtual machine`` dialog, click btn:[Browse] and locate the full SLES image you downloaded from your SCC account.
+. In the [guimenu]``Create a new virtual machine`` dialog, click btn:[Browse] and locate the full SLES image you downloaded from your {scc} account.
 
 . Configure your machine with at least 2 GB RAM and a minimum of 2 CPUs.
 
@@ -89,7 +89,7 @@ rpm -e --nodeps sles-release
 ----
 +
 
-. Register {productname} Proxy with SCC (for example, replace `<productversion>` with `{productnumber}` and `<architecture>` with `x86_64`):
+. Register {productname} Proxy with {scc} (for example, replace `<productversion>` with `{productnumber}` and `<architecture>` with `x86_64`):
 +
 
 ----
