--- a/modules/quickstart/pages/container-deployment/suma/quickstart-deploy-suma-server.adoc
+++ b/modules/quickstart/pages/container-deployment/suma/quickstart-deploy-suma-server.adoc
@@ -161,7 +161,7 @@ In this guide you learned how to deploy {productname} {productnumber} Server as 
 
 == Synchronize with SUSE Customer Center 
 
-This section covers synchronizing with SCC from the {webui} and adding your first client channel.
+This section covers synchronizing with {scc} from the {webui} and adding your first client channel.
 
 [[proc-admin-organization-credentials]]
 .Procedure: Entering Organization Credentials
