--- a/modules/quickstart/pages/legacy-installation/quickstart-install-uyuni-server.adoc
+++ b/modules/quickstart/pages/legacy-installation/quickstart-install-uyuni-server.adoc
@@ -126,18 +126,18 @@ When you have completed the {productname} {webui} setup, you are taken to the me
 
 == Optional: Synchronizing Products from {scclongform}
 
-{scclongform} (SCC) maintains a collection of repositories which contain packages, software and updates for all supported enterprise client systems.
+{scclongform} ({scc}) maintains a collection of repositories which contain packages, software and updates for all supported enterprise client systems.
 These repositories are organized into channels each of which provide software specific to a distribution, release, and architecture.
-After synchronizing with SCC, clients can receive updates, be organized into groups, and assigned to specific product software channels.
+After synchronizing with {scc}, clients can receive updates, be organized into groups, and assigned to specific product software channels.
 
-This section covers synchronizing with SCC from the {webui} and adding your first client channel.
+This section covers synchronizing with {scc} from the {webui} and adding your first client channel.
 
 [NOTE]
 ====
 For Uyuni, synchronizing products from {scclongform} is optional.
 ====
 
-Before you can synchronize software repositories with SCC, you will need to enter organization credentials in {productname}.
+Before you can synchronize software repositories with {scc}, you will need to enter organization credentials in {productname}.
 The organization credentials give you access to the {suse} product downloads.
 You will find your organization credentials in https://scc.suse.com/organizations.
 
