--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
@@ -7,14 +7,14 @@ Connecting and registering {payg} images is supported and can be done without ad
 
 
 {byos} ({byoslongform}) Images::
-Registering {byos} images requires SCC ({scclongform}) credentials beforehand. 
-If a user attempts to onboard a {byos} image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
+Registering {byos} images requires {scc} ({scclongform}) credentials beforehand. 
+If a user attempts to onboard a {byos} image without providing {scc} credentials, the operation will fail, as these credentials are required to verify your subscription.
 
 [IMPORTANT]
 ====
 * Always verify the type of image ({payg} or {byos}) prior to initiating the registration process with {productname} to ensure a smooth and error-free connection.
 
-* If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing {byos} images.
+* If you have {scc} credentials ensure your {scc} credentials are valid and have the necessary permissions for utilizing {byos} images.
 
 **Do not** register {payg} instances with the {scclongform}.
 Only {byos} instances should be registered against the {scclongform}.
