--- a/modules/administration/pages/mgr-sync.adoc
+++ b/modules/administration/pages/mgr-sync.adoc
@@ -24,7 +24,7 @@ mgr-sync [-h] [--version] [-v] [-s] [-d {1,2,3}] {list,add,refresh,delete}
 | list | List channels, organization credentials, or products | ``mgr-sync list channels``
 | add | Add channels, organization credentials, or products | ``mgr-sync add channel <channel_name>``
 | refresh | Refresh the local copy of products, channels, and subscriptions | ``mgr-sync refresh``
-| delete | Delete existing SCC organization credentials from the local system | ``mgr-sync delete credentials``
+| delete | Delete existing {scc} organization credentials from the local system | ``mgr-sync delete credentials``
 | sync | Synchronize specified channel or ask for it when left blank| ``mgr-sync sync channel <channel_name>``
 |===
 
