--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -90,7 +90,7 @@ server.susemanager.forward_registration = 0
 
 [WARNING]
 ====
-Disabling data synchronizing with SCC will lead to reduced visibility of your managed clients between RMT, SMT, {productname} and SCC-directly registered clients.
+Disabling data synchronizing with {scc} will lead to reduced visibility of your managed clients between RMT, SMT, {productname} and {scc}-directly registered clients.
 
 By synchronizing data, you ensure a uniform view of all registered clients.
 
