--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-products.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-products.adoc
@@ -15,7 +15,7 @@ link:https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuratio
 
 It is simple to open a support case with SUSE for {productname} {payg}.
 
-Create a ‘supportconfig’ via {productname} {payg} instance CLI and upload the output to the SUSE Customer Center (SCC) at the following link:
+Create a ‘supportconfig’ via {productname} {payg} instance CLI and upload the output to the SUSE Customer Center ({scc}) at the following link:
 
 https://scc.suse.com/cloudsupport
 
@@ -47,13 +47,13 @@ Billing will occur from the downstream {productname} {payg} Server instance, whe
 
 == Can I manage {byoslongform} - {byos} SLES instances in the cloud with {productname} {payg}?
 
-To manage {byos} instances, SUSE Customer Center (SCC) credentials with entitlement to valid SLES or SLES for SAP subscriptions will be required. These credentials should be added to the {productname} configuration to enable this functionality.
+To manage {byos} instances, SUSE Customer Center ({scc}) credentials with entitlement to valid SLES or SLES for SAP subscriptions will be required. These credentials should be added to the {productname} configuration to enable this functionality.
 
 == I have a hybrid setup; can I manage instances (workloads) outside of the cloud?
 
 Yes, it is possible to manage instances, in the cloud, on premises or both.
 
-To enable management of SUSE workloads in an on-premises data center, SCC credentials with entitlement to valid SLES or SLES for SAP subscriptions will be required.
+To enable management of SUSE workloads in an on-premises data center, {scc} credentials with entitlement to valid SLES or SLES for SAP subscriptions will be required.
 
 These credentials should be added to the {productname} configuration to enable this functionality.
 
