--- a/modules/specialized-guides/pages/qs-sap/prepare-clients.adoc
+++ b/modules/specialized-guides/pages/qs-sap/prepare-clients.adoc
@@ -18,7 +18,7 @@ For more information about the clients you need to set up for an SAP cluster, se
 
 Each client within your SAP cluster must be registered with the {scclongform}.
 To obtain your registration code, navigate to https://scc.suse.com/login in your web browser.
-Log in to your SCC account, or follow the prompts to create a new account.
+Log in to your {scc} account, or follow the prompts to create a new account.
 Click the btn:[Subscriptions] tab to see the registration code.
 When you install {sles}{nbsp}15 for SAP the {unifiedinstaller} prompts you for the code.
 
