--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -16,7 +16,7 @@ https://documentation.suse.com/sles/html/SLES-all/cha-transactional-updates.html
 
 ifeval::[{suma-content} == true]
 
-// WARNING: The product names and channels for SCC here are a guess, and could change. Make sure you review them before publishing this for SUSE Manager!!!
+// WARNING: The product names and channels for {scc} here are a guess, and could change. Make sure you review them before publishing this for SUSE Manager!!!
 [[opensuse-channels-wizard]]
 [cols="1,1", options="header"]
 .{opensuse} Products - WebUI
