--- a/modules/installation-and-upgrade/pages/general-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/general-requirements.adoc
@@ -21,7 +21,7 @@ Create an account with {scclongform} prior to deployment of {productname} {produ
 [[creating.scc.account.mgr]]
 .Procedure: Obtain Your Organization Credentials
 . Navigate to https://scc.suse.com/login in your web browser.
-. Log in to your SCC account, or follow the prompts to create a new account.
+. Log in to your {scc} account, or follow the prompts to create a new account.
 . If you have not yet done so, click btn:[Connect to an Organization] and type or search for your organization.
 . Click btn:[Manage my Organizations] and select your organization from the list by clicking the organization name.
 . Click the btn:[Users] tab, and then select the btn:[Organization Credentials] sub-tab.
@@ -29,7 +29,7 @@ Create an account with {scclongform} prior to deployment of {productname} {produ
 
 Depending on your organization's setup, you might also need to activate your subscription, using the btn:[Activate Subscriptions] menu from the left navigation bar.
 
-For more information about using SCC, see https://scc.suse.com/docs/help.
+For more information about using {scc}, see https://scc.suse.com/docs/help.
 
 
 
