--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-products.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-products.adoc
@@ -11,6 +11,7 @@ Customers can simply deploy a new {productname} {payg} instance from the cloud m
 
 link:https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/client-config-overview.html[Client configuration overview]
 
+
 == How do I get support?
 
 It is simple to open a support case with SUSE for {productname} {payg}.
@@ -21,6 +22,7 @@ https://scc.suse.com/cloudsupport
 
 Providing marketplace billing is active, a support case will be opened.
 
+
 == Are there any differences between the {productname} {payg} product on the cloud marketplaces compared to the versions I can run in my own data center?
 
 The {productname} {payg} product available in the cloud marketplace is the same product, with similar functionality that you would run on-premises or with a manual installation.
@@ -29,15 +31,18 @@ The only exceptions being the ability to bill via the cloud marketplace and conn
 
 It is also worth checking the list of supported client operating systems to ensure your needs are met.
 
+
 == Does the {productname} {payg} instance need to run 24/7?
 
 It is recommended that the {productname} instance always remains active.
 
-== How do I get fixes and updates for {productname} {payg}, do I need a subscription key?
+
+== How do I get fixes and updates for {productname} {payg}? Do I need a subscription key?
 
 {productname} {payg}, when deployed via the cloud marketplace will automatically connect to the SUSE Update Infrastructure, no separate {productname} subscription key is required.
 
 Updates to the {productname} instance can be applied from those channels using standard SUSE tooling (i.e. zypper).
+
 
 == Is the use of {productname} Hub supported with this listing?
 
@@ -45,11 +50,13 @@ Yes, {productname} Hub is recommended for customers with more than 10,000 manage
 
 Billing will occur from the downstream {productname} {payg} Server instance, where managed instances are connected.
 
+
 == Can I manage {byoslongform} - {byos} SLES instances in the cloud with {productname} {payg}?
 
 To manage {byos} instances, SUSE Customer Center ({scc}) credentials with entitlement to valid SLES or SLES for SAP subscriptions will be required. These credentials should be added to the {productname} configuration to enable this functionality.
 
-== I have a hybrid setup; can I manage instances (workloads) outside of the cloud?
+
+== I have a hybrid setup. Can I manage instances (workloads) outside of the cloud?
 
 Yes, it is possible to manage instances, in the cloud, on premises or both.
 
@@ -62,15 +69,18 @@ These credentials should be added to the {productname} configuration to enable t
  Egress data charges may apply when managing workloads outside of the cloud provider's network.
 ====
 
+
 == Are there additional charges for using a {productname} Proxy?
 
 With a hybrid landscape, egress data charges may apply when managing workloads outside of the cloud provider. To reduce these costs, SUSE recommend the use of the containerized proxy.
 
 Please note: Whilst the SUSE Manger Proxy usage is included as part of the {productname} {payg} subscription, an LCM+ subscription will be billed if the proxy is also a managed workload, so in other words it counted as a managed client.
 
-== Can I have a {productname} {payg} Server on premises and bill via the Cloud Marketplace.
+
+== Can I have a {productname} {payg} Server on premises and bill via the Cloud Marketplace?
 
 No, to benefit from cloud marketplace billing, the {productname} {payg} instance must reside on the cloud. Any {productname} instances on premises will require their own subscriptions.
+
 
 == What client Operating Systems are supported with {productname} {payg}?
 Please refer to the product documentation for a full list of supported clients.
