Replacing plain text with the parameter.

--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-products.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-products.adoc
@@ -16,7 +16,7 @@ link:https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuratio
 
 It is simple to open a support case with SUSE for {productname} {payg}.
 
-Create a ‘supportconfig’ via {productname} {payg} instance CLI and upload the output to the SUSE Customer Center ({scc}) at the following link:
+Create a ‘supportconfig’ via {productname} {payg} instance CLI and upload the output to the {scclongform} ({scc}) at the following link:
 
 https://scc.suse.com/cloudsupport
 
@@ -53,7 +53,7 @@ Billing will occur from the downstream {productname} {payg} Server instance, whe
 
 == Can I manage {byoslongform} - {byos} SLES instances in the cloud with {productname} {payg}?
 
-To manage {byos} instances, SUSE Customer Center ({scc}) credentials with entitlement to valid SLES or SLES for SAP subscriptions will be required. These credentials should be added to the {productname} configuration to enable this functionality.
+To manage {byos} instances, {scclongform} ({scc}) credentials with entitlement to valid SLES or SLES for SAP subscriptions will be required. These credentials should be added to the {productname} configuration to enable this functionality.
 
 
 == I have a hybrid setup. Can I manage instances (workloads) outside of the cloud?
