--- a/modules/specialized-guides/pages/salt/salt-formula-liberate.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-liberate.adoc
@@ -23,7 +23,7 @@ To provide all the software channels for {sll} on the {productname} Server, proc
 
 
 
-.Procedure: Providing SUSE Customer Center credentials
+.Procedure: Providing {scclongform} credentials
 
 . Sign in to {scclongform} at https://scc.suse.com.
 
