Revert "Replacing plain text with the parameter."
This reverts commit 540b897df98fb8dca0d5375d3262c2f3ac0602a4.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
@@ -83,7 +83,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 [[minimal.susemgr.prep]]
 == Register {sl-micro} and {productname} {productnumber} Server
 
-Before starting obtain your SUSE Manager Registration Code from {scclongform} - https://scc.suse.com.
+Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
 
 [NOTE]
 ====
