--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -194,7 +194,7 @@ In most cases, allowing access to these URLs is sufficient:
 * installer-updates.suse.com
 * registry.suse.com
 
-You can find additional details on whitelisting the specified URLs and their associated IP addresses in this article: https://www.suse.com/support/kb/doc/?id=000021034[Accessing {scclongform} and SUSE registry behind a firewall and/or through a proxy].
+You can find additional details on whitelisting the specified URLs and their associated IP addresses in this article: https://www.suse.com/support/kb/doc/?id=000021034[Accessing SUSE Customer Center and SUSE registry behind a firewall and/or through a proxy].
 
 If you are using non-{suse} clients you might also need to allow access to other servers that provide specific packages for those operating systems.
 For example, if you have {ubuntu} clients, you will need to be able to access the {ubuntu} server.
