--- a/modules/quickstart/pages/container-deployment/suma/quickstart-deploy-suma-server.adoc
+++ b/modules/quickstart/pages/container-deployment/suma/quickstart-deploy-suma-server.adoc
@@ -159,7 +159,7 @@ In this guide you learned how to deploy {productname} {productnumber} Server as 
 
 
 
-== Synchronize with {scclonfgorm} 
+== Synchronize with SUSE Customer Center 
 
 This section covers synchronizing with {scc} from the {webui} and adding your first client channel.
 
@@ -178,7 +178,7 @@ When the credentials are confirmed with a green check-mark icon, proceed with <<
 . From the [guimenu]``Setup Wizard`` page select the btn:[SUSE Products] tab.
     If you previously registered with {scclongform} a list of products will populate the table.
     This operation could take up to a few minutes.
-    You can monitor the progress of the operation in section on the right ``Refresh the product catalog from {scclongform}``.
+    You can monitor the progress of the operation in section on the right ``Refresh the product catalog from SUSE Customer Center``.
     The table of products lists architecture, channels, and status information.
     For more information, see xref:reference:admin/setup-wizard.adoc[Wizard].
 +
