--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -67,7 +67,7 @@ Get a list of all keywords with supportconfig -F.
 
 To open a new support case for your cloud {payglongform} instance, you need to generate a **supportconfig** file and then follow the steps listed on:
 
-link:https://scc.suse.com/cloudsupport[{scclongform} Cloudsupport]
+link:https://scc.suse.com/cloudsupport[SUSE Customer Center Cloudsupport]
 
 
 
