--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -320,7 +320,7 @@ When the credentials are confirmed with a green check-mark icon, proceed with <<
 . From the [guimenu]``Setup Wizard`` page select the [guimenu]``SUSE Products`` tab.
   If you recently registered with {scclongform} a list of products will begin populating the table.
   This operation could take up to a few minutes.
-  You can monitor the progress of the operation in section on the right ``Refresh the product catalog from {scclongform}``.
+  You can monitor the progress of the operation in section on the right ``Refresh the product catalog from SUSE Customer Center``.
   The table of products lists architecture, channels, and status information.
   For more information, see xref:reference:admin/setup-wizard.adoc[Wizard].
 +
