Product name change preparations (part 1).

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-connections-and-bootstrapping.adoc
@@ -49,9 +49,9 @@ These two actions are the steps required for initiating and completing the clien
 
 .Procedure: Connecting {sle} {payg} Instances to {productname} {payg}
 
-. Return to the SUSE Manager Server {webui}.
+. Return to the {productname} Server {webui}.
 
-. Navigate to menu:Admin[Setup Wizard > {payglongform}] and click the btn:[+Add Pay-as-you-go] button.
+. Navigate to menu:Admin[Setup Wizard > {payglongform}] and click the btn:[+Add {payglongform}] button.
 
 . Add a description.
 
