--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc
@@ -1,6 +1,6 @@
-= Obtaining the {productname} Server {payg} public cloud image on {azure}
+= Obtaining the {productname} Server {payg} Public Cloud Image on {azure}
 
-Follow these step-by-step instructions to locate the SUSE Manager {productnumber} {payg} image on {azure}.
+Follow these step-by-step instructions to locate the {productname} {productnumber} {payg} image on {azure}.
 You can also review the latest available images for the public cloud using Pint (Public Cloud Information Tracker). 
 
 See: link:https://pint.suse.com/[pint.suse.com]
@@ -10,15 +10,21 @@ There are currently two offers for {productname} {payg} on {azure}:
 * **{productname} {productnumber} with 24x7 Support ltd**
 * **{productname} {productnumber} with 24x7 Support llc**
 
-.Procedure: Obtaining the {productname} {payg} image on {azure}
-. Start by logging into your Azure account at Azure Portal.
 
-. Once logged in, navigate to the **Virtual Machines** section. This can be found in the dashboard or by using the search bar at the top of the Azure Portal.
+.Procedure: Obtaining the {productname} {payg} Image on {azure}
+. Start by logging into your {azure} account at {azure} Portal.
 
-. Click on **Create a Virtual Machine.** Here, you will be asked to fill in details such as the subscription, resource group, and virtual machine name.
+. Once logged in, navigate to the **Virtual Machines** section. 
+  This can be found in the dashboard or by using the search bar at the top of the {azure} Portal.
 
-. During the creation of a virtual machine there is an option for **Image.** Select the correct  cloud image for your VM. 
+. Click on **Create a Virtual Machine.** 
+  Here, you will be asked to fill in details such as the subscription, resource group, and virtual machine name.
 
-. If you don't find the image you need, you can browse the Azure Marketplace. Click on **See all images** or go to the **Marketplace** and search for the image you need. 
+. During the creation of a virtual machine there is an option for **Image.** 
+  Select the correct  cloud image for your VM. 
 
-. After selecting your image, continue with the configuration of your virtual machine. Review all settings, and then create your VM.
+. If you do not find the image you need, you can browse the {azure} Marketplace. 
+  Click on **See all images** or go to the **Marketplace** and search for the image you need. 
+
+. After selecting your image, continue with the configuration of your virtual machine. 
+  Review all settings, and then create your VM.
