--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-requirements.adoc
@@ -1,9 +1,12 @@
-= Azure System Requirements
-When setting up a SUSE Manager {payg} instance on {azure}, it's essential to consider system requirements for optimal performance and functionality. The default requirements outlined below have been tailored for smooth deployment and operation.
+= {azure} System Requirements
 
-By default, certain disks are automatically generated when establishing a {productname} {payg} instance on {azure}. To complete the setup of these disks, use the **mgr-storage-server** tool.
+When setting up a {productname} {payg} instance on {azure}, it s essential to consider system requirements for optimal performance and functionality. 
+The default requirements outlined below have been tailored for smooth deployment and operation.
 
-.Azure System Requirements
+By default, certain disks are automatically generated when establishing a {productname} {payg} instance on {azure}. 
+To complete the setup of these disks, use the [literal]``mgr-storage-server tool.
+
+.{azure} System Requirements
 [cols="1,1"]
 |===
 | Requirement | Details
