--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-server-setup.adoc
@@ -1,7 +1,7 @@
 [[azure-server-setup]]
-= Initial setup
+= Initial Setup
 
-.Procedure: Login and update the system
+.Procedure: Log in and Update the System
 . SSH into your {azure} instance.
 
 . Switch to the root user and update the system.
@@ -43,10 +43,13 @@ If you want to manage systems in an already existing network, you must configure
 
 [IMPORTANT]
 ====
-When adding new virtual machines (VMs), such as {sles} 15 SP5, it's crucial to ensure that they are configured within the same subnet as the SUSE Manager instance. This step is essential for successful network setup and integration.
+When adding new virtual machines (VMs), such as {sles} 15 SP5, it is crucial to ensure that they are configured within the same subnet as the {productname} instance. 
+This step is essential for successful network setup and integration.
 
-Additionally, be mindful of the geographical restrictions associated with your plans. Make sure to utilize the appropriate Azure accounts which correspond to the specific geographic zones of your project. 
+Additionally, be mindful of the geographical restrictions associated with your plans. 
+Make sure to utilize the appropriate Azure accounts which correspond to the specific geographic zones of your project. 
 ====
+
 
 == Configure Storage
 . SSH into your {azure} instance.
