--- a/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-intro.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/troubleshooting/tshoot-public-cloud-intro.adoc
@@ -6,6 +6,6 @@
 
 **Last updated:** {lastupdate}
 
-This section is dedicated to some common problems you might encounter with SUSE Manager in Public Cloud, and solutions to resolving them.
+This section is dedicated to some common problems you might encounter with {productname} in Public Cloud, and solutions to resolving them.
 
 For all other troubleshooting topics, see **Administration Guide >** xref:administration:troubleshooting/tshoot-intro.adoc[].
