--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
@@ -1,4 +1,4 @@
-= SUSE Manager {payg} {webui} Setup 
+= {productname} {payg} {webui} Setup 
 
 == Requirements
 
@@ -41,14 +41,14 @@ The Products table listed under menu:Admin[Setup Wizard > Products] will be empt
 
 .Procedure: Verify credentials for {payg} and refreshing the product list
 
-. On your new server navigate to the menu:Admin[Setup Wizard > Pay-as-you-go] tab to view and manage {payg} credentials. 
-  Localhost should provide the description ``SUSE Manager Pay-as-you-go`` and the status should read ``Credentials successfully updated``.
+. On your new server navigate to the menu:Admin[Setup Wizard > {payglongform}] tab to view and manage {payg} credentials. 
+  Localhost should provide the description ``{productname} {payglongform}`` and the status should read ``Credentials successfully updated``.
 
 . Navigate to the menu:Admin[Products] tab and click btn:[Refresh].
 
 . Once the refresh completes the following products are listed:
-* **SUSE Manager Proxy**
-* **SUSE Manager Server**
+* **{productname} Proxy**
+* **{productname} Server**
 * **Free products**
 
 [IMPORTANT]
