Product name change preparations (part 2).

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
@@ -49,7 +49,7 @@ These two actions are the steps required for initiating and completing the clien
 
 .Procedure: Connecting {sle} {payg} Instances to {productname} {payg}
 
-. Return to the SUSE Manager Server {webui}.
+. Return to the {productname} Server {webui}.
 
 . Navigate to menu:Admin[Setup Wizard > Pay-as-you-go] and click the btn:[+Add Pay-as-you-go] button.
 
