--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-requirements.adoc
@@ -1,6 +1,6 @@
-= AWS System Requirements
+= {aws} System Requirements
 
-When setting up a SUSE Manager {payg} instance on {aws}, it's essential to consider system requirements for optimal performance and functionality. 
+When setting up a {productname} {payg} instance on {aws}, it is essential to consider system requirements for optimal performance and functionality. 
 The default requirements outlined below have been tailored for smooth deployment and operation. 
 
 .{aws} System Requirements
