--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc
@@ -1,4 +1,4 @@
-= SUSE Manager {payg} {webui} Configuration 
+= {productname} {payg} {webui} Configuration 
 
 == Requirements
 
@@ -26,7 +26,7 @@ Its primary function is to monitor the presence of all running {payg} instances 
 
 .Procedure: Logging in
 
-. Login to the SUSE Manager Server {webui}.
+. Login to the {productname} Server {webui}.
 The username is **admin** the password will be the **Instance ID** on {aws} EC2.
 
 . Select menu:Admin[Setup Wizard].
@@ -43,13 +43,13 @@ The Products table listed under menu:Admin[Setup Wizard > Products] will be empt
 .Procedure: Verify Credentials for {payg} and Refreshing the Product List
 
 . On your new server navigate to the menu:Admin[Setup Wizard > {payglongform}] tab to view and manage {payg} credentials. 
-  Localhost should provide the description ``SUSE Manager {payglongform}`` and the status should read [literal]``Credentials successfully updated``.
+  Localhost should provide the description ``{productname} {payglongform}`` and the status should read [literal]``Credentials successfully updated``.
 
 . Navigate to the menu:Admin[Products] tab and click btn:[Refresh].
 
 . Once the refresh completes the following products are listed:
-* **SUSE Manager Proxy**
-* **SUSE Manager Server**
+* **{productname} Proxy**
+* **{productname} Server**
 * **Free products**
 
 [IMPORTANT]
