--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc
@@ -1,6 +1,6 @@
 = Obtaining the {productname} Server {payg} Public Cloud Image on {aws}
 
-Follow these step-by-step instructions to locate the SUSE Manager {productnumber} {payg} image on {aws}.
+Follow these step-by-step instructions to locate the {productname} {productnumber} {payg} image on {aws}.
 You can also review the latest available images for the public cloud using Pint (Public Cloud Information Tracker).
 
 For more information see: link:https://pint.suse.com/[pint.suse.com]
@@ -19,14 +19,14 @@ For more information see: link:https://pint.suse.com/[pint.suse.com]
 . In the EC2 dashboard, in the main content section, you'll find the btn:[Launch Instance] button. Click it.
 
 . From the **Choose an Amazon Machine Image (AMI)** page. 
-Select **Browse more AMIs**
+  Select **Browse more AMIs**.
 
-. Search for **SUSE Manager**
+. Search for **{productname}**.
 
 . Depending on your location select your AMI image. 
 
-* **SUSE Manager Server Family (EU and UK only)**
-* **SUSE Manager Server Family (non-EU and non-UK-only)**.
+* **{productname} Server Family (EU and UK only)**
+* **{productname} Server Family (non-EU and non-UK-only)**.
 
 . Click btn:[Select].
 
