Product name change preparations (part 3).

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -170,14 +170,14 @@ The following steps register a server with the {x86_64} architecture and thus re
 To register {arm} or {s390x} architectures use the correct registration code.
 ====
 
-. Next add the **SUSE Manager Server Extension 5.0 x86_64** Extension.
+. Next add the **{productname} Server Extension 5.0 x86_64** Extension.
   List available extensions with the following command:
 +
 ----
 transactional-update --quiet register --list-extensions
 ----
 
-. Use your **SUSE Manager Server Extension 5.0 x86_64** registration code with the following command:
+. Use your **{productname} Server Extension 5.0 x86_64** registration code with the following command:
 +
 ----
 transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <reg_code>
