--- a/modules/installation-and-upgrade/pages/install-proxy.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy]]
-= Install {productname} Proxy from Packages
+= Install {productname} Proxy From Packages
 
 To install {productname} Proxy from packages, you will need to start by installing {sles} media.
 This section covers the KVM settings required to perform a {sles} installation as the base for {productname} Proxy.
@@ -73,8 +73,7 @@ link:{sles-base-os-documentation}/article-installation.html[].
 
 
 [[installation-proxy-sles]]
-== Change SLES for SUSE Manager Proxy
-
+== Change SLES for {productname} Proxy
 
 [[proc-installation-proxy-sles]]
 .Procedure: Changing SLES for {productname} Proxy Installation
