--- a/modules/installation-and-upgrade/pages/proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-registration.adoc
@@ -1,5 +1,5 @@
 [[proxy-register]]
-= SUSE Manager Proxy Registration
+= {productname} Proxy Registration
 
 // needs to be updated for container use
 
@@ -35,7 +35,7 @@ The [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.3-Updates`` channel is mandat
 . To bootstrap a proxy, use the bootstrap script.
     For more information about bootstrap scripts, see xref:client-configuration:registration-bootstrap.adoc[].
 +
-. Alternatively, in the SUSE Manager Web UI, navigate to menu:System[Bootstrapping].
+. Alternatively, in the {productname} {webui}, navigate to menu:System[Bootstrapping].
 +
 . Navigate to menu:System Details[Software > Software Channels], and check that the four proxy channels ([systemitem]``Pool`` and [systemitem]``Updates`` for [systemitem]``SLE-PRODUCT`` and [systemitem]``SLE-MODULE``) plus the recommended channels are selected.
     [systemitem]``SLE-PRODUCT-Pool`` must be the base channel and the others are child channels.
