--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -98,7 +98,7 @@ image::setup-wizard.png[scaledwidth=80%]
 . From the products page enter {sle-micro} in the filter field.
 . Next use the drop-down to select the required architecture.
   For this example {x86_64}.
-. In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} checkbox then use the drop-down to select the [systemitem]``SUSE Manager Proxy Extension 5.0 x86_64 BETA`` extension.
+. In the [systemitem]``Product Description`` field select the {sle-micro} {microversion} checkbox then use the drop-down to select the [systemitem]``{productname} Proxy Extension 5.0 x86_64 BETA`` extension.
 . Click the btn:[Add products] button.
 . Wait for the synchronization to complete.
 
