--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -17,9 +17,12 @@ Before using the {payg} feature ensure:
 
 * {productname} Server has connectivity to the {payg} instance (ideally in the same region) either directly or via a bastion
 
-* A basic {scclongform} account is required. Enter your valid {scclongform} credentials in menu:Admin[Setup Wizard > Organization Credentials]. This account is required for accessing the {productname} client tools for boostrapping regardless of {payg} instances.
+* A basic {scclongform} account is required. Enter your valid {scclongform} credentials in menu:Admin[Setup Wizard > Organization Credentials]. 
+  This account is required for accessing the {productname} client tools for boostrapping regardless of {payg} instances.
 
-* If you bootstrap the {payg} instance to SUSE Manager, SUSE Manager will disable its {payg} repositories then add repositories from where it mirrored the data from the RMT server. The final result will be {payg} instances acquiring the same repositories from the RMT servers but through the SUSE Manager server itself. Of course repositories can still be setup primarily from {scc}.
+* If you bootstrap the {payg} instance to {productname}, {productname} will disable its {payg} repositories then add repositories from where it mirrored the data from the RMT server. 
+  The final result will be {payg} instances acquiring the same repositories from the RMT servers but through the {productname} server itself. 
+  Of course repositories can still be setup primarily from {scc}.
 
 
 
