--- a/modules/installation-and-upgrade/pages/install-proxy.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy.adoc
@@ -73,7 +73,7 @@ link:{sles-base-os-documentation}/article-installation.html[].
 
 
 [[installation-proxy-sles]]
-== Change SLES for SUSE Manager Proxy
+== Change SLES for {productname} Proxy
 
 
 [[proc-installation-proxy-sles]]
