Product name change preparations (part 4).

--- a/modules/reference/pages/admin/general.adoc
+++ b/modules/reference/pages/admin/general.adoc
@@ -9,7 +9,7 @@ On the menu:Admin[Manager Configuration > General] page you can configure your {
 |===
 | Option                       | Description   | Default
 | Administrator Email Address  | Email address of the {productname} administrator. | Pre-populated
-| SUSE Manager Hostname        | Hostname of the {productname} Server. | Pre-populated
+| {productname} Hostname       | Hostname of the {productname} Server. | Pre-populated
 | HTTP Proxy                   | The hostname and port of the proxy, if you are using one. Use syntax ``<hostname>:<port>``, for example: ``<example.com>:8080``. | None
 | HTTP Proxy username          | The username to use on the proxy server, if you are using one. | None
 | HTTP Proxy password        | The password to use on the proxy server, if you are using one. | None
