--- a/modules/reference/pages/configuration/config-systems-target.adoc
+++ b/modules/reference/pages/configuration/config-systems-target.adoc
@@ -9,7 +9,7 @@ The table has three columns:
 * If the system is prepared for configuration file deployment
 * The steps necessary to prepare the system.
 
-To prepare a system, check the box to the left of the profile name then click the btn:[Enable SUSE Manager Configuration Management] button.
+To prepare a system, check the box to the left of the profile name then click the btn:[Enable {productname} Configuration Management] button.
 All of the preparatory steps that can be automatically performed are scheduled by {productname}.
 
 [NOTE]
