--- a/modules/reference/pages/spacecmd-intro.adoc
+++ b/modules/reference/pages/spacecmd-intro.adoc
@@ -11,7 +11,7 @@ This interface is available for {productname}, Satellite and Spacewalk servers.
 spacecmd is written in Python and uses the XML-RPC API provided by the server.
 
 .What can spacecmd do for me?
-* Manage almost all aspects of SUSE Manager from the command line with spacecmd
+* Manage almost all aspects of {productname} from the command line with spacecmd
 * Tab completion is available for all commands
 * Single commands can be passed to spacecmd without entering the interactive shell (excellent for shell scripts)
 * May also be accessed and used as an interactive shell
