--- a/modules/reference/pages/spacecmd/api.adoc
+++ b/modules/reference/pages/spacecmd/api.adoc
@@ -2,7 +2,7 @@
 = api
 
 The following API command and its options are available for calling the XML-RPC API directly.
-Calling the API directly allows you to use the latest features in SUSE Manager from the command-line using spacecmd as a wrapper for stand-alone commands or used from within scripts.
+Calling the API directly allows you to use the latest features in {productname} from the command-line using spacecmd as a wrapper for stand-alone commands or used from within scripts.
 
 To gain access to the latest feature additions call [command]``api api.getApiCallList`` from within spacecmd to list all currently available API commands formatted in json.
 
