--- a/modules/reference/pages/spacecmd/get.adoc
+++ b/modules/reference/pages/spacecmd/get.adoc
@@ -27,7 +27,7 @@ usage: get_certificateexpiration
 
 == get_serverversion
 
-Display SUSE Manager server version.
+Display {productname} server version.
 
 [source]
 --
