--- a/modules/reference/pages/spacecmd/package.adoc
+++ b/modules/reference/pages/spacecmd/package.adoc
@@ -62,7 +62,7 @@ usage: package_listorphans
 
 == package_remove
 
-Remove a package from SUSE Manager/Satellite
+Remove a package from {productname}/Satellite
 
 [source]
 --
