Product name change preparations (part 5).

--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -108,7 +108,7 @@ Doing so causes the autoinstallation to fail.
 
 Default Parent Channel::
 
-Avoid using the [systemitem]``SUSE Manager Default`` parent channel.
+Avoid using the [systemitem]``{productname} Default`` parent channel.
 This setting forces {productname} to choose a parent channel that best corresponds to the installed operating system, which can sometimes lead to unexpected behavior.
 Instead, we recommend you create activation keys specific to each distribution and architecture.
 
