--- a/modules/client-configuration/pages/vhm-aws.adoc
+++ b/modules/client-configuration/pages/vhm-aws.adoc
@@ -52,7 +52,7 @@ I1234567890abcdef0
 For security reasons, always grant the least privilege possible for a task to be performed.
 Using an Access Key with excessive permissions for users connecting to AWS is not advised.
 
-For SUSE Manager to gather the information required from AWS, the VHM needs permission to describe EC2 instances and addresses.
+For {productname} to gather the information required from AWS, the VHM needs permission to describe EC2 instances and addresses.
 One method to grant this is to create a new IAM user (Identity and Access Management) specific to this task, create a policy as follows and attach to the user:
 
 ----
