--- a/modules/client-configuration/pages/vhm-nutanix.adoc
+++ b/modules/client-configuration/pages/vhm-nutanix.adoc
@@ -3,7 +3,7 @@
 
 ifeval::[{suma-content} == true]
 
-{suse} is a Nutanix ecosystem partner and SUSE Manager has obtained the Nutanix-ready certification in the "Nutanix AHV integrated" category.
+{suse} is a Nutanix ecosystem partner and {productname} has obtained the Nutanix-ready certification in the "Nutanix AHV integrated" category.
 
 For more information about Nutanix integrations, see https://www.nutanix.com/partners/technology-alliances/suse
 
