Apply suggestions from code review
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/installation-and-upgrade/pages/container-deployment/start_proxy.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/start_proxy.adoc
@@ -19,7 +19,7 @@ mgrpxy status
 ----
 +
 
-Five {productname} Proxy containers should be present:
+Five {productname} Proxy containers should be present and should be part of the [literal]``proxy-pod`` container pod:
 
 - proxy-salt-broker
 - proxy-httpd
@@ -27,6 +27,5 @@ Five {productname} Proxy containers should be present:
 - proxy-squid
 - proxy-ssh
 
-And should be part of the [literal]``proxy-pod`` container pod.
 
 
